<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.FormularioActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView android:id="@+id/foto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_no_image"
            android:clickable="true"
            android:contentDescription="@string/foto_aluno"/>


        <TextView android:id="@+id/textNome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome"
            />

        <EditText android:id="@+id/edtNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/nome_aluno"
            android:layout_marginBottom="15dp"
            android:ems="10">
            <requestFocus/>
        </EditText>


        <TextView android:id="@+id/textTelefone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telefone"
            />

        <EditText android:id="@+id/edtTelefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/telefone_hint"
            android:layout_marginBottom="15dp"
            android:ems="10"/>


        <TextView android:id="@+id/textSite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/site"
            />

        <EditText android:id="@+id/edtSite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/site_hint"
            android:layout_marginBottom="15dp"
            android:ems="10"/>


        <TextView android:id="@+id/textEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            />

        <EditText android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint"
            android:layout_marginBottom="15dp"
            android:ems="10"/>


        <TextView android:id="@+id/textEndereco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/endereco"
            />

        <EditText android:id="@+id/edtEndereco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/endereco_hint"
            android:layout_marginBottom="15dp"
            android:ems="10"/>


        <TextView android:id="@+id/textNota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nota"
            />

        <SeekBar android:id="@+id/seekNota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:max="10"
            />

        <Button android:id="@+id/btnSalvar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/salvar_dados"/>

    </LinearLayout>

</ScrollView>
