<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_novo"
        android:icon="@drawable/ic_novo"
        android:title="@string/novo"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_mapa"
        android:icon="@drawable/ic_mapa"
        android:title="@string/mapa"
        app:showAsAction="always" />


    <item
        android:id="@+id/menu_enviar_alunos"
        android:icon="@drawable/ic_enviar"
        android:title="@string/sincronizar"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_receber_provar"
        android:icon="@drawable/ic_receber"
        android:title="@string/provas"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_preferencias"
        android:icon="@drawable/ic_preferencias"
        android:title="@string/preferencias"
        app:showAsAction="never" />

</menu>